# claude-kit-ko

./: .gitignore  CREDITS.md  LICENSE  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
kit/: __init__.py  __main__.py  cli.py  core.py
skills/arch-budget/: SKILL.md
skills/design-layout/: SKILL.md
skills/experience-block/: SKILL.md
skills/idea-shaping/: SKILL.md
skills/interview-prep/: SKILL.md
skills/jd-fit/: SKILL.md
skills/research-cited/: SKILL.md
skills/sprint-plan/: SKILL.md
skills/write-human/: SKILL.md
standards/: CLAUDE-template.md  backend-guardrails.md  docs-structure.md  memory-format.md
templates/: CLAUDE.global.md
templates/career-hub/: README.md  applications.md  gap-plan.md
templates/career-hub/experience-blocks/: INDEX.md
tests/: test_core.py
