[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-kit-ko"
version = "0.1.0"
description = "한국어 Claude Code 스킬 키트 — 설치·검증 CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "yeon-uu" }]
dependencies = []  # 표준 라이브러리만 사용

[project.urls]
Homepage = "https://github.com/yeon-uu/claude-kit-ko"

[project.scripts]
kit = "kit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
